bugfixes including horizontal scrolling and adding and deleting tasks

--- a/views/checklist/checklist.css
+++ b/views/checklist/checklist.css
@@ -1,5 +1,5 @@
 h2.section {
-    font-size: 16px;
+    font-size: 14px;
     color: black;
     /* border-bottom: 1px solid black; */
     margin-left: 5px;
@@ -16,10 +16,9 @@ body {
 }
 
 #content {
-    overflow: hidden;
     display: -ms-grid;
     display: grid;
-    grid-template-columns: 0px 1fr 1fr;
+    grid-template-columns: 0px 1fr;
     grid-auto-rows: minmax(40px, auto);
     width: 100vw;
     height: 100vh;
@@ -28,8 +27,9 @@ body {
     position: relative;
     padding: 0;
     grid-template-areas:
-      "sidebar header header"
-      "sidebar main main"
+      "sidebar header"
+      "sidebar main";
+    overflow: hidden;
 }
 
 header {
@@ -52,6 +52,7 @@ main {
     grid-area: main;
     height: calc(100vh - 41px);
     width: 100%;
+    overflow: hidden;
 }
 
 .content-div {
@@ -63,7 +64,7 @@ main {
     width: 100%;
     position: relative;
     height: 100%;
-    overflow-y: hidden;
+    overflow: hidden;
 }
 
 .shifted-left {
@@ -393,6 +394,7 @@ span#add-task-package-span:hover {
     flex: auto;
     height: calc(100% - 52px); /* 176 is the height of the header + checklist header + grid gaps + some borders. */
     overflow-y: scroll;
+    scroll-behavior: smooth;
 }
 
 /* To change task height:
@@ -498,6 +500,7 @@ span#add-task-package-span:hover {
     width: calc(100% - 20px);
     padding: 0px 10px;
     cursor: text !important;
+    scroll-behavior: smooth;
 }
 
 #add-description-area:focus {
